2021-02-13  Akira Kakuto  <kakuto@w32tex.org>

	* enctex.ch: Recover the original enctex.ch in order to be
	compatible with the TeX.
	* enctex2.ch: Rename the new enctex.ch for pdfTeX.
	* pdftexdir/am/pdftex.am: Rename enctex.ch to enctex2.ch.

2021-02-12  Karl Berry  <karl@freefriends.org>

	* tracingstacklevels.ch: new change file for \tracingstacklevels
	parameter, proposed and implemented by Petr Olsak.
	* pdftexdir/am/pdftex.am (pdftex_ch_srcs),
	* xetexdir/am/xetex.am (xetex_ch_srcs): add it.
	* tests/tracingstacklevels.tex,
	* tests/tracingstacklevel2.tex: test files (for manual use; not
	included in make check).
	* xetexdir/xetex.ch (v): new declaration needed in start_input.
	* enctex.ch: adjust web2c_int_pars so that this is applied after
	tracingstacklevels.ch.

2021-02-08  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Don't repeat yourself.

2021-02-07  Andreas Scherer  <https://ascherer.github.io>

	* cwebboot.cin: CWEB development has moved to another level.

2021-02-07  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin,
	* cwebdir/*,
	* man/ctwill.man,
	* man/cweb.man: New CWEB 4.0 amd CWEBbin 2021.

2021-02-05  Karl Berry  <karl@freefriends.org>

	* mf.ch: adjust for latest fixes.

2021-02-05  Donald Knuth  <tex-k@tug.org>

	* mf.web,
	* tex.web: further fixes. Reports from Udo Wermuth
	and Phelype Oleinik.
	* triptrap/trip.log: update for newly added blank line.

2021-01-31  Karl Berry  <karl@freefriends.org>

	* weave.ch (banner): 4.5.

2021-01-31  Donald Knuth  <tex-k@tug.org>

	* weave.web (banner, title): should have been 4.5.
	Report from Wolfgang Helbig.

2021-01-29  Karl Berry  <karl@freefriends.org>

	* NEWS: mention tuneup.

	* alephdir/alephextra.h,
	* alephdir/com16bit.ch,
	* alephdir/eobase.ch,
	* alephdir/eocprt.ch,
	* alephdir/eoext.ch,
	* alephdir/eover.ch,
	* alephdir/om16bit.ch,
	* alephdir/omfont.ch,
	* alephdir/omstr.ch,
	* eptexdir/eptex.ech,