@@ -67,6 +67,7 @@ uptex.web: tie$(EXEEXT) $(uptex_web_srcs)
 uptex_web_srcs = \
 	tex.web \
 	tex.ch \
+	tracingstacklevels.ch \
 	zlib-fmt.ch
 
 # Generate uptex.ch
